feat: google_analytics

--- a/source/_posts/第一篇文章.md
+++ b/source/_posts/第一篇文章.md
@@ -1,6 +1,8 @@
 ---
 title: 2021-01-14-first-page
+tags: 生活 日常 日记
+categories: 日记
+abbrlink: 9f7c9eb7
 date: 2021-01-14 11:16:17
-tags:
 ---
 我的第一篇文章
