fix: tags,categories

--- a/source/_posts/前端工程化.md
+++ b/source/_posts/前端工程化.md
@@ -1,8 +1,10 @@
+---
 title: 前端工程化简介
 tags:
-   -工程化
-   -前端
+- 工程化
+- 前端
 categories: 前端
+abbrlink: f86000d3
 date: 2021-08-29 11:45:17
 ---
 ## 什么是前端工程化？
