--- a/source/_posts/职业发展规划.md
+++ b/source/_posts/职业发展规划.md
@@ -1,7 +1,9 @@
+---
 title: 职业发展规划
 tags:
-   -职业规划
+- 职业规划
 categories: 职业
+abbrlink: 9906e5a2
 ---
 
 <img src="/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211005181421300.png" alt="image-20211005181421300" style="zoom: 25%;" />
