--- a/source/_posts/技术选型.md
+++ b/source/_posts/技术选型.md
@@ -10,15 +10,15 @@ abbrlink: c3d6d626
 
 ### 数据驱动的思考方式
 
-![image-20211006142903090](/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211006142903090.png)
+![image-20211006142903090](/images/image-20211006142903090.png)
 
 ### 前端技能模型
 
-![image-20211006144752628](/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211006144752628.png)
+![image-20211006144752628](/images/image-20211006144752628.png)
 
 ### 工具链
 
-![image-20211006145025735](/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211006145025735.png)
+![image-20211006145025735](/images/image-20211006145025735.png)
 
 ### 持续集成
 
@@ -26,7 +26,7 @@ abbrlink: c3d6d626
 
 **前端持续集成**：Check-in build，Lint + Rule Check
 
-![image-20211006150858373](/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211006150858373.png)
+![image-20211006150858373](/images/image-20211006150858373.png)
 
 ### 技术架构
 
