--- a/source/_posts/职业发展规划.md
+++ b/source/_posts/职业发展规划.md
@@ -6,8 +6,8 @@ categories: 职业
 abbrlink: 9906e5a2
 ---
 
-<img src="/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211005181421300.png" alt="image-20211005181421300" style="zoom: 25%;" />
-
+<!-- <img src="/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211005181421300.png" alt="image-20211005181421300" style="zoom: 25%;" /> -->
+![](/images/image-20211005181421300.png)
 ## 1.成就
 
 ### 1.1业务型成就
