--- a/source/_posts/编译原理概述.md
+++ b/source/_posts/编译原理概述.md
@@ -9,7 +9,7 @@ categories: 编译原理
 abbrlink: a070bf7
 ---
 
-## 1.什么是编译程序？
+## 什么是编译程序？
 
 从功能上看，一个编译程序就是一个语言翻译程序。把一种语言（即源程序）书写的程序翻译成另一种语言（目标程序）的等价程序。
 
@@ -19,19 +19,19 @@ abbrlink: a070bf7
 
 ![image-20211007180836858](/images/image-20211007180836858.png)
 
-## 2.编译过程和编译程序的结构
+## 编译过程和编译程序的结构
 
 编译程序完成从源程序到目标程序的翻译工作，划分成阶段进行，每个阶段将源程序的一种表示形式转换成另一种表示形式。典型的划分方法是将编译过程划分为词法分析、语法分析、语义分析、中间代码生成、代码优化和目标代码生成6个阶段。
 
 ![image-20211007181312682](/images/image-20211007181312682.png)
 
-### 2.1.编译程序过程概述
+### 编译程序过程概述
 
-#### 1.词法分析
+#### 词法分析
 
 词法分析的任务是从左到右一个字符一个字符地读入源程序，对构成源程序的字符流进行扫描和分解，从而识别出一个个单词（有时候也称为单词符号或符号）。
 
-#### 2.语法分析
+#### 语法分析
 
 语法分析的任务是在词法分析的基础上将单词序列分解成各类语法短语（也称为语法单位），可以表示成语法树。
 
@@ -49,35 +49,35 @@ id1 := id2 + id3 * 10
 2. 任何常数（整常数、实常数）是表达式。
 3. 若表达式1和2都是表达式，那么：`表达式1+表达式2` 、`表达式1*表达式2`都是表达式。
 
-#### 3.语义分析
+#### 语义分析
 
 语义分析是审查源程序有无语义错误，为代码生成阶段收集类型信息。语义分析的一个工作是进行类型审查，审查每个算符是否具有规范允许的运算对象，当不符合语言规范时，编译程序应报告错误。
 
-#### 4.中间代码生成
+#### 中间代码生成
 
 进行了语法分析和语义分析之后，有的编译程序将源程序变成一种内部表示形式，即中间语言或中间代码。中间代码是一种结构简单、含意明确的记号系统。
 
-#### 5.代码优化
+#### 代码优化
 
 该阶段的任务是将中间代码进行变换或进行改造，目的是使生成的目标代码更为高效，即省时间和省空间。
 
-#### 6.目标代码生成
+#### 目标代码生成
 
 把中间代码变换成特定机器上的绝对指令代码或可重定位的指令代码或编译指令代码。
 
-## 2.2.编译程序的结构
+## 编译程序的结构
 
 6个阶段的任务对应6个模块完成：词法分析程序、语法分析程序、语义分析程序、中间代码生成程序、代码优化程序和目标代码生成程序。另外完整的编译程序还必需包括表格管理程序和出错处理程序。
 
 ![/images/image-20211007212938427.png)
 
-## 2.3.编译阶段的组合
+## 编译阶段的组合
 
 编译的过程可分为前端和后端，前端的工作主要依赖于源语言而与目标机无关。前端通常包括词法分析、语法分析、语义分析和中间代码生成，某些优化工作也可放在前端做，还包括与前端相关的出错处理工作和符号表管理工作。后端指的是那些依赖于目标机而一般不依赖于源程序，只与中间代码有关的那些阶段工作，即目标代码生成，以及相关出错处理和符号表操作。
 
-## 3.解释程序和一些软件工具
+## 解释程序和一些软件工具
 
-### 3.1解释程序
+### 解释程序
 
 **解释型语言**（英语：Interpreted language）是一种编程语言类型。这种类型的编程语言，会将代码一句一句直接运行，不需要像编译语言（Compiled language）一样，经过编译器]先行编译为机器代码，之后再运行。JavaScript也是解释语言。
 
@@ -99,23 +99,23 @@ id1 := id2 + id3 * 10
 
 ![image-20211007225544832](/images/image-20211007225544832.png)
 
-### 3.2处理源程序的软件工具
+### 处理源程序的软件工具
 
 为了提高软件开发的效率和质量，需要有一套软件开发过程所遵循的规范和标准，应使用先进的软件开发方法，并有相迎的软件工具的支持。
 
-#### 1.软件的结构化编辑器
+#### 软件的结构化编辑器
 
 结构化编辑器不仅具有通常的正文编辑器的正文编辑和修改功能，而且还能像编译程序那样对源程序正文进行分析，能够执行一些对正确编制程序有帮助的附加任务。
 
-#### 2.语言程序的调试工具
+#### 语言程序的调试工具
 
 调试工具的作用是让编程人员了解程序的执行结果和编程人员的意图是否一致，程序的执行石沟实现预期的算法和功能。
 
-#### 3.格式化工具
+#### 格式化工具
 
 程序格式化工具分析源程序并以使程序结构变得清晰可读的形式打印出来。
 
-#### 4.语言程序测试工具
+#### 语言程序测试工具
 
 语言程序的测试工具有两种：静态分析器和动态测试器。
 
@@ -123,11 +123,11 @@ id1 := id2 + id3 * 10
 
 **动态测试工具**：也是首先对源程序进行分析，在分析基础上将用于记录和显示程序执行轨迹的语句或函数插入到源程序的适当位置，并用测试用例记录和显示程序运行时的实际路径，将运行结果与预期的结果进行比较分析，帮助编程人员查找问题。
 
-#### 5.程序理解工具
+#### 程序理解工具
 
 程序理解工具对程序进行分析，确定模块间的调用关系，记录程序数据静态属性和结构属性，并画出控制流程图，帮助用户理解程序。
 
-#### 6.高级语言之间的转换工具
+#### 高级语言之间的转换工具
 
 转换工具是把一种高级语言转换成另一种高级语言，乃至汇编 语言转换成高级语言的工具。转换工作要对被转换的语言进行词法和语法分析，只不过生成的目标语言是另一种高级语言而已。
 
