--- a/source/_posts/职业发展规划.md
+++ b/source/_posts/职业发展规划.md
@@ -8,9 +8,9 @@ abbrlink: 9906e5a2
 
 <!-- <img src="/Users/yuki/Documents/Projects/blog/yuki0320.github.io/source/images/image-20211005181421300.png" alt="image-20211005181421300" style="zoom: 25%;" /> -->
 ![](/images/image-20211005181421300.png)
-## 1.成就
+## 成就
 
-### 1.1业务型成就
+### 业务型成就
 
 #### 业务目标
 
@@ -32,7 +32,7 @@ abbrlink: 9906e5a2
 - 数据采集、数据报表
 - 向上级汇报
 
-### 1.2技术难题
+### 技术难题
 
 **目标**：公认的技术难点
 
@@ -40,12 +40,10 @@ abbrlink: 9906e5a2
 
 **结果**：问题解决
 
-### 1.3工程型成就
+### 工程型成就
 
 **目标**：质量、效率
 
 **方案与实施**：1.规章制度，2.库，3.工具，4.系统
 
 **结果**：线上监控
-
-- 
