--- a/source/_posts/编译原理概述.md
+++ b/source/_posts/编译原理概述.md
@@ -65,13 +65,13 @@ id1 := id2 + id3 * 10
 
 把中间代码变换成特定机器上的绝对指令代码或可重定位的指令代码或编译指令代码。
 
-## 编译程序的结构
+### 编译程序的结构
 
 6个阶段的任务对应6个模块完成：词法分析程序、语法分析程序、语义分析程序、中间代码生成程序、代码优化程序和目标代码生成程序。另外完整的编译程序还必需包括表格管理程序和出错处理程序。
 
 ![/images/image-20211007212938427.png)
 
-## 编译阶段的组合
+### 编译阶段的组合
 
 编译的过程可分为前端和后端，前端的工作主要依赖于源语言而与目标机无关。前端通常包括词法分析、语法分析、语义分析和中间代码生成，某些优化工作也可放在前端做，还包括与前端相关的出错处理工作和符号表管理工作。后端指的是那些依赖于目标机而一般不依赖于源程序，只与中间代码有关的那些阶段工作，即目标代码生成，以及相关出错处理和符号表操作。
 
