--- a/source/_posts/编译原理概述.md
+++ b/source/_posts/编译原理概述.md
@@ -23,7 +23,7 @@ abbrlink: a070bf7
 
 编译程序完成从源程序到目标程序的翻译工作，划分成阶段进行，每个阶段将源程序的一种表示形式转换成另一种表示形式。典型的划分方法是将编译过程划分为词法分析、语法分析、语义分析、中间代码生成、代码优化和目标代码生成6个阶段。
 
-![image-20211007181312682](/images/image-20211007181312682.png)
+![](/images/image-20211007181312682.png)
 
 ### 编译程序过程概述
 
@@ -69,7 +69,7 @@ id1 := id2 + id3 * 10
 
 6个阶段的任务对应6个模块完成：词法分析程序、语法分析程序、语义分析程序、中间代码生成程序、代码优化程序和目标代码生成程序。另外完整的编译程序还必需包括表格管理程序和出错处理程序。
 
-![/images/image-20211007212938427.png)
+![](/images/image-20211007212938427.png)
 
 ### 编译阶段的组合
 
@@ -130,4 +130,3 @@ id1 := id2 + id3 * 10
 #### 高级语言之间的转换工具
 
 转换工具是把一种高级语言转换成另一种高级语言，乃至汇编 语言转换成高级语言的工具。转换工作要对被转换的语言进行词法和语法分析，只不过生成的目标语言是另一种高级语言而已。
-
