--- a/source/_posts/编译原理概述.md
+++ b/source/_posts/编译原理概述.md
@@ -27,9 +27,47 @@ abbrlink: a070bf7
 
 ### 编译程序过程概述
 
-#### 词法分析
+#### 词法分析(lexical analysis)
 
-词法分析的任务是从左到右一个字符一个字符地读入源程序，对构成源程序的字符流进行扫描和分解，从而识别出一个个单词（有时候也称为单词符号或符号）。
+词法分析的任务是从左到右一个字符一个字符地读入源程序，对构成源程序的字符流进行扫描和分解，从而识别出一个个单词（有时候也称为单词符号或符号）,确定单词类型，将识别出的单词转换成统一的机内表示---词法单元（token）形式。
+
+```
+token: <种别码，属性值>
+```
+
+| 单词类型 | 种别                                                    | 种别码             |
+| -------- | ------------------------------------------------------- | ------------------ |
+| 关键词   | Program、if、else...                                    | 一词一码           |
+| 标识符   | 变量名、数组名、记录名、过程名...                       | 多词一码           |
+| 常量     | 整型、浮点型、字符型、布尔型...                         | 一型一码           |
+| 运算符   | 算术（+ - * / ++）、关系（>,<,==,!=,>=,<=）逻辑（&\|~） | 一词一码或一型一码 |
+| 界限符   | ;()={}...                                               | 一词一码           |
+
+例如：
+
+```java
+position = initial + rate * 60
+```
+
+这个赋值语句中的字符可以组合成如下字素（lexeme），并映射成为如下词法单元。这些词法单元将被传递给语法分析阶段。
+
+1. positon是一个词素，被映射成词法单元<id,1>，其中id是表示标识符(identifier)的抽象符号，而1指向符号表中position对应的条目。一个标识符对应的符号表条目存放该标识符有关的信息，比如他的名字和类型。
+2. 赋值符号=是一个词素，被映射成词法单元<=>。因为这个词法单元不需要属性值，所以我们省略第二个分量，也可以使用assign这样的抽象符号作为词法单元的名字。
+3. initial是一个词素，被映射成<id,2>，其中2指向initial对应的符号表条目。
+4. +是一个词素，被映射成词法单元<+>。
+5. rate是一个词素，被映射成词法单元<id,3>，其中3指向rate对应的符号表条目。
+6. *是一个词素，被映射成词法单元<\*>。
+7. 60是一个词素，被映射成词法单元<60>(技术上讲是建立一个<number,4>的词法单元)。
+
+所以上面的复制语句被表示成如下的词法单元序列：
+
+```
+<id,1> <=> <id,2> <+> <id,3> <*> <number,4>
+```
+
+![image-20211009185656328](/Users/yuki/Library/Application Support/typora-user-images/image-20211009185656328.png)
+
+
 
 #### 语法分析
 
@@ -73,7 +111,7 @@ id1 := id2 + id3 * 10
 
 ### 编译阶段的组合
 
-编译的过程可分为前端和后端，前端的工作主要依赖于源语言而与目标机无关。前端通常包括词法分析、语法分析、语义分析和中间代码生成，某些优化工作也可放在前端做，还包括与前端相关的出错处理工作和符号表管理工作。后端指的是那些依赖于目标机而一般不依赖于源程序，只与中间代码有关的那些阶段工作，即目标代码生成，以及相关出错处理和符号表操作。
+编译的过程可分为前端（analysis：分析部分）和后端（synthesis：综合部分），前端的工作主要依赖于源语言而与目标机无关。前端通常包括词法分析、语法分析、语义分析和中间代码生成，某些优化工作也可放在前端做，还包括与前端相关的出错处理工作和符号表管理工作。后端指的是那些依赖于目标机而一般不依赖于源程序，只与中间代码有关的那些阶段工作，即目标代码生成，以及相关出错处理和符号表操作。
 
 ## 解释程序和一些软件工具
 
