--- a/source/_posts/原型.md
+++ b/source/_posts/原型.md
@@ -1,4 +1,13 @@
-原型
+---
+title: 原型
+tags:
+  - 原型
+  - 前端
+  - JavaScript
+  - 语言基础
+categories: 前端
+abbrlink: 263f3be4
+---
 
 原型（prototype）是JavaScript里的一个重要概念。它本来是极简单的。但因为一些原因，原型时常让试图了解它的人感到复杂。
 
