--- a/source/_posts/定型數組.md
+++ b/source/_posts/定型數組.md
@@ -1,3 +1,13 @@
+---
+title: 定型数组
+tags:
+  - 语言基础
+  - 前端
+  - JavaScript
+  - 定型数组
+categories: 前端
+abbrlink: 9b1b0f9c
+---
 ## 1. ArrayBuffer和TypedArray、DataView的关系
 
 ArrayBuffer存储了固定byte(字节)的raw binary data(原始二进制数据)。不能直接通过ArrayBuffer读取和修改数据。只能通过view(**视图**)来操作。其他编程语言里有相似的概念，一般叫做byte array(字节数组)，可以直接操作，元素值的范围在[0,255]之间，类似于Uint8Array。个人觉得ByteArray比ArrayBuffer这个命名要好。同一ArrayBuffer可以用不同的视图，以不同的**“视角”**去读写。
@@ -83,4 +93,3 @@ MDN上有个稍微复杂的例子—— [Working with complex data structures](h
 
 *   [https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer)
 *   [https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/TypedArray](
-
